--- a/index_bkp_sem_vue.html
+++ b/index_bkp_sem_vue.html
@@ -9,7 +9,7 @@
 	<!--Import Google Icon Font-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!-- Materialize CSS -->
-	<link rel="stylesheet" type="text/css" href="css/materialize.css">
+	<link rel="stylesheet" type="text/css" href="lib/materialize/dist/css/materialize.min.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
@@ -83,7 +83,7 @@
 	<!-- jQuery -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	<!-- Materialize JS -->
-	<script type="text/javascript" src="js/materialize.js"></script>
+	<script type="text/javascript" src="lib/materialize/dist/js/materialize.min.js"></script>
 
 	<script type="text/javascript">
 		$(()=>{
