--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
 	<script type="text/javascript" src="page/menu.js"></script>
 	<script type="text/javascript" src="page/home.js"></script>
+	<script type="text/javascript" src="componente/footer.js"></script>
 
 	<!-- O main deve ser o ultimo script -->
 	<script type="text/javascript" src="wdi_main.js"></script>
