Atualizando componentes home e menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<!-- jQuery -->
 	<!-- TODO tentar deletar esse script -->
-	<script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
+	<!-- <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script> -->
 
 
 
