--- a/index.html
+++ b/index.html
@@ -16,24 +16,38 @@
 		<home-page id="home"></home-page>
 	</div>
 
+
+
+
+
+
+
+
+
+
+
 	<!-- jQuery -->
 	<!-- TODO tentar deletar esse script -->
 	<!-- <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script> -->
-
-
-
-
-
-
 
 	<!-- Materialize JS -->
 	<script type="text/javascript" src="lib/materialize/dist/js/materialize.js"></script>
 	<!-- Vue Js -->
 	<script type="text/javascript" src="lib/vue/dist/vue.min.js"></script>
+	<script type="text/javascript" src="lib/vue-router/dist/vue-router.min.js"></script>
 
+
+<!-- Todos os javascripts da aplicação devem ser inseridos depois das bibliotecas externas dependentes -->
+
+	<script type="text/javascript" src="config/wdi.config.js"></script>
 	<script type="text/javascript" src="page/menu.js"></script>
 	<script type="text/javascript" src="page/home.js"></script>
 	<script type="text/javascript" src="componente/footer.js"></script>
+	
+	<script type="text/javascript" src="page/pdf/pdf.component.js"></script>
+	<script type="text/javascript" src="page/pdf/pdf.route.js"></script>
+	<script type="text/javascript" src="page/html/html.component.js"></script>
+	<script type="text/javascript" src="page/html/html.route.js"></script>
 
 	<!-- O main deve ser o ultimo script -->
 	<script type="text/javascript" src="wdi_main.js"></script>
