Criando funcionalidade para template em arquivo separado

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<!-- Vue Js -->
 	<script type="text/javascript" src="lib/vue/dist/vue.min.js"></script>
 	<script type="text/javascript" src="lib/vue-router/dist/vue-router.min.js"></script>
+	<script type="text/javascript" src="lib/axios/dist/axios.min.js"></script>
 
 
 <!-- Todos os javascripts da aplicação devem ser inseridos depois das bibliotecas externas dependentes -->
