Melhorando a arquitetura do projeto

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 	<script type="text/javascript" src="config/wdi.config.js"></script>
 
 
-	<script type="text/javascript" src="page/menu.js"></script>
-	<script type="text/javascript" src="page/home.js"></script>
-	<script type="text/javascript" src="componente/footer.js"></script>
+	<!-- Componentes -->
+	<script type="text/javascript" src="component/home/home.component.js"></script>
+	<script type="text/javascript" src="component/menu/menu.component.js"></script>
+	<script type="text/javascript" src="component/footer/footer.component.js"></script>
 	
+	<!-- Paginas -->
 	<script type="text/javascript" src="page/pdf/pdf.component.js"></script>
 	<script type="text/javascript" src="page/pdf/pdf.route.js"></script>
 	<script type="text/javascript" src="page/html/html.component.js"></script>
