Criando a pagina docx

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 	<script type="text/javascript" src="page/pdf/pdf.route.js"></script>
 	<script type="text/javascript" src="page/html/html.component.js"></script>
 	<script type="text/javascript" src="page/html/html.route.js"></script>
+	<script type="text/javascript" src="page/docx/docx.component.js"></script>
+	<script type="text/javascript" src="page/docx/docx.route.js"></script>
 
 	<!-- O main deve ser o ultimo script -->
 	<script type="text/javascript" src="wdi_main.js"></script>
