--- a/index.html
+++ b/index.html
@@ -28,18 +28,22 @@
 
 	<!-- jQuery -->
 	<!-- TODO tentar deletar esse script -->
-	<!-- <script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script> -->
+	<script type="text/javascript" src="lib/jquery/dist/jquery.min.js"></script>
 
 	<!-- Materialize JS -->
-	<script type="text/javascript" src="lib/materialize/dist/js/materialize.js"></script>
+	<script type="text/javascript" src="lib/materialize/dist/js/materialize.min.js"></script>
 	<!-- Vue Js -->
 	<script type="text/javascript" src="lib/vue/dist/vue.min.js"></script>
 	<script type="text/javascript" src="lib/vue-router/dist/vue-router.min.js"></script>
 	<script type="text/javascript" src="lib/axios/dist/axios.min.js"></script>
 
+	<script type="text/javascript" src="lib/pdfjs-dist/build/pdf.min.js"></script>
+	<script type="text/javascript" src="lib/pdfjs-dist/build/pdf.worker.min.js"></script>
 
 <!-- Todos os javascripts da aplicação devem ser inseridos depois das bibliotecas externas dependentes -->
 	<script type="text/javascript" src="config/wdi.config.js"></script>
+	<script type="text/javascript" src="js/wdi.audio.js"></script>
+	<script type="text/javascript" src="js/wdi.pdf.js"></script>
 
 
 	<!-- Componentes -->
