Implementando o leitor de pdf

--- a/pdf_em_audio.html
+++ b/pdf_em_audio.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>PDF em audio</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
