--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Leitor</title>
+	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Font awesome -->
 	<link rel="stylesheet" href="lib/font-awesome/css/all.min.css">
 	<!-- Materialize CSS -->
