--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Leitor</title>
+	<!-- <title>Leitor</title> -->
+	<title>Agra...</title>
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Font awesome -->
 	<link rel="stylesheet" href="lib/font-awesome/css/all.min.css">
