Ajustando a funcionalidade de rota para trabalhar com filhos

--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
 	<script type="text/javascript" src="page/docx/docx.component.js"></script>
 	<script type="text/javascript" src="page/docx/docx.route.js"></script>
 
+	<script type="text/javascript" src="page/teste/teste.component.js"></script>
+	<script type="text/javascript" src="page/teste/teste.route.js"></script>
+	
+	<script type="text/javascript" src="page/teste/filho/filho.component.js"></script>
+	<script type="text/javascript" src="page/teste/filho/filho.route.js"></script>
+	
+	<script type="text/javascript" src="page/teste/filho2/filho2.component.js"></script>
+	<script type="text/javascript" src="page/teste/filho2/filho2.route.js"></script>
+
+	<script type="text/javascript" src="page/teste/filho2/neto/neto.component.js"></script>
+	<script type="text/javascript" src="page/teste/filho2/neto/neto.route.js"></script>
+
 	<!-- O main deve ser o ultimo script -->
 	<script type="text/javascript" src="wdi_main.js"></script>
 
