Adiconando comentário sobre o exemplo de rota com filhos

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	<script type="text/javascript" src="page/docx/docx.component.js"></script>
 	<script type="text/javascript" src="page/docx/docx.route.js"></script>
 
+	<!-- Exemplo de rotas com filhos -->
 	<script type="text/javascript" src="page/teste/teste.component.js"></script>
 	<script type="text/javascript" src="page/teste/teste.route.js"></script>
 	<script type="text/javascript" src="page/teste/filho/filho.component.js"></script>
